# Battleships

./: Board.cpp  Board.h  CMakeLists.txt  Fleet.cpp  Fleet.h  PlotBoard.cpp  PlotBoard.h  Ship.cpp  Ship.h  checksunk.cpp  checksunk.h  gui.h  main.cpp  setup.cpp  setup.h  setupboard.cpp  setupboard.h  shot.cpp  shot.h  turn.cpp  turn.h  ui.cpp  ui.h
